End of section 2

--- a/NZWalks.API/NZWalks/appsettings.json
+++ b/NZWalks.API/NZWalks/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalk": "Server=DESKTOP-HUG4NQU\\SQLEXPRESS; Database=NZWalkDB; Trusted_Connection=True"
+  }
 }
